CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)
PROJECT(basic_test)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

SET(CMAKE_RULE_MESSAGES OFF)
SET(CMAKE_VERBOSE_MAKEFILE ON)


INCLUDE_DIRECTORIES(../build/include/ ../)

LINK_DIRECTORIES(../build/lib)
ADD_EXECUTABLE(basic_test_static basic_test.cc)
TARGET_LINK_LIBRARIES(basic_test_static librocksdb.a pthread gomp aio rt asan)
